objects/Campaign_Sub_Source_Member_Status_Map__c/Campaign_Sub_Source_Member_Status_Map__c.object-meta.xml
<CustomObject>
    <label>Campaign Sub Source Member Status Map</label>
    <nameField>
        <displayFormat>CSSMS-{000000}</displayFormat>
        <label>Campaign Sub Source Campaign Member Stat</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Sub Source Member Status Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>