objects/Campaign_Sub_Source_Member_Status_Map__c/fields/Campaign_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Sub_Source__c</fullName>
    <label>Campaign Sub Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Campaign_Sub_Source</valueSetName>
    </valueSet>
</CustomField>