objects/Campaign_Sub_Source_Member_Status_Map__c/listViews/X3rd_Party_Events.listView-meta.xml
<ListView>
    <fullName>X3rd_Party_Events</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Sub_Source__c</columns>
    <columns>Member_Status_Label__c</columns>
    <columns>IsDefault__c</columns>
    <columns>HasResponded__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign_Sub_Source__c</field>
        <operation>equals</operation>
        <value>3rd Party Event</value>
    </filters>
    <label>3rd Party Events</label>
</ListView>